--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.0",
     "date-fns": "^4.1.0",
-    "next": "15.1.0",
+    "next": "^16.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -23,12 +23,12 @@
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.0",
     "prettier": "^3.4.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.7.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "typescript": "^5.7.0"
   }
 }
